# VRAXION

./: .gitattributes  .gitignore  ARCHIVE.md  BETA.md  CHANGELOG.md  CITATION.cff  CODEX_HANDOVER.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEPLOYMENT.md  DOCUMENTATION_REVIEW_REPORT.md  LICENSE  LICENSE_BOUNDARY.md  MESSAGE_FOR_CLAUDE_POTENTIAL_FITNESS.md  MESSAGE_FOR_CLAUDE_ZERO_THETA_FIX.md  NOTICE  OWNERSHIP.md  PACKAGE_BOUNDARY.md  PUBLIC_BOUNDARY.md  PUBLIC_DELIVERY_MODEL.md  PUBLIC_GITHUB_STATE.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_REPO_CLEANUP_REPORT.md  README.md  RELEASE_BETA.md  RESEARCH_NOTICE_V5_MISMATCH.md  SECURITY.md  SESSION_BRIEFING.md  SUPPORT.md  TRADEMARKS.md  TRADEMARK_POLICY.md  VALIDATED_FINDINGS.md  VERSION.json  VRAXION_INFINITE.py  _check_telem.py  _compile_check.py  _run_dashboard.cmd  (+21 more)
.cargo/: config.toml
Python/: README.md  __init__.py  byte_encoder.py  pyproject.toml
Python/_inspection/: BETA8_CKPT_NOTES.md  inspect_beta8_ckpt.py  sample_inspection_output.txt
Python/block_a_byte_unit/: README.md  REVIEW_NOTES.md  __init__.py  byte_encoder.py
Python/block_a_byte_unit/tests/: test_byte_encoder.py
Python/block_b_merger/: README.md  __init__.py  merger.py
Python/block_b_merger/tests/: conftest.py  test_merger.py
Python/block_c_embedder/: README.md  __init__.py  embedder.py
Python/block_c_embedder/tests/: test_chain_a_b_c.py
Python/tests/: test_byte_encoder.py
Rust/: Cargo.toml  README.md
Rust/src/: byte_encoder.rs  lib.rs
Rust/src/block_a_byte_unit/: byte_encoder.rs  mod.rs
Rust/src/block_b_merger/: merger.rs  mod.rs
Rust/tests/: chain_a_b.rs
crates/alphasync-core/: Cargo.toml  LICENSE  README.md
crates/alphasync-core/src/: eval.rs  fabric.rs  ids.rs  lib.rs  progress.rs
crates/alphasync-core/src/fabric/: confidence.rs  consensus.rs  error.rs  evolution.rs  evolution_router.rs  matrix.rs  prismion.rs  profile.rs  proposal.rs
crates/alphasync-runtime/: Cargo.toml  README.md
crates/alphasync-runtime/examples/: synthetic_runtime_scene.rs  synthetic_runtime_smoke.rs
crates/alphasync-runtime/src/: artifact_json.rs  artifact_writer.rs  lib.rs  logic_iq.rs  main.rs  synthetic.rs
instnct-core/: Cargo.toml  alu_unit_v1.json  arch_sweep_results.tsv  ep_playground.html  ep_wave_viz.html  gate_library_int.json  gate_library_v2.json  gate_mux_log.txt  gpu_bench_safe.py  gpu_ternary_bench.py  greedy_backprop_results.tsv  greedy_freeze_results.tsv  holo_diagnostic_results.tsv  vraxion_arch.html  wave_ep_curves.tsv  wave_ep_results.tsv  wave_ep_v2_curves.tsv  wave_ep_v2_results.tsv
instnct-core/benches/: aos_spike_ab.rs  bitmask_ab.rs  bitset_ab.rs  compact_neuron_ab.rs  edge_compact_ab.rs  forward_bench.rs  optimization_ab.rs  phase_breakdown.rs  prebake_thresh_ab.rs  prefetch_ab.rs  scatter_breakdown.rs  sparse_input_ab.rs  spike_pack_ab.rs  spike_skip_ab.rs
instnct-core/benches/common/: mod.rs
instnct-core/examples/: README.md  ab_adaptive_ops.rs  ab_fitness.rs  ab_fixed_w.rs  ab_jackpot.rs  ab_relu_vs_c19_autoenc.rs  ab_vs_ba_ratio.rs  ablation_test.rs  abstract_core_activation_sweep.rs  abstract_core_v1.rs  abstract_core_v4_push.rs  abstract_core_v5_400ep.rs  abstraction_toy.rs  accept_sweep.rs  activation_sweep.rs  adaptive_butterfly.rs  addition_diag.rs  addition_diagnose.rs  addition_edge_test.rs  addition_empty.rs  addition_freeze.rs  addition_push100.rs  addition_scale.rs  addition_tick_sweep.rs  adversarial_test.rs  all_binary_mirror.rs  alu8bit.rs  alu_allinone.rs  alu_hybrid.rs  alu_integer.rs  alu_math.rs  alu_unit.rs  alu_xray.rs  analyze_checkpoint.rs  annealing_sweep.rs  backprop_2bit_encoder.rs  bench_search.rs  benchmark_c19.rs  beukers_all_ops.rs  beukers_arithmetic.rs  (+384 more)
instnct-core/examples/archive/2026-04/: README.md  abstract_core_v2_quant.rs  abstract_core_v3_ctx16.rs  addition_diag.rs  addition_empty.rs  addition_generalize.rs  addition_grow.rs  addition_stateful.rs  addition_sweep.rs  breed_experiment.rs  breed_v2.rs  byte_alu.rs  byte_interp_min_neurons.rs  byte_mini.rs  byte_opcode_grower.rs  byte_opcode_v1.rs  chip_activations.rs  chip_compose.rs  chip_minimum.rs  chip_ops_sweep.rs  chip_recurrent.rs  chip_scale_v2.rs  circuit_reuse.rs  conv_pattern_brain.rs  conv_pipeline_4neuron.rs  grid3_curriculum.rs  mirror_autoencoder.rs  pocket_breed.rs  pocket_continue.rs  pocket_cross.rs  pocket_evolve.rs  pocket_pair.rs
instnct-core/results/c19_multihead_bit/: README.md
instnct-core/results/c19_multihead_bit/grid3_center/: state.json
instnct-core/results/c19_multihead_bit/grid3_copy_bit_0/: state.json
instnct-core/src/: checkpoint.rs  corpus.rs  eval.rs  eval_bytepair.rs  evolution.rs  experimental_route_grammar.rs  fitness.rs  forward.rs  init.rs  lib.rs  network.rs  parameters.rs  parquet_fineweb.rs  projection.rs  propagation.rs  quaternary_mask.rs  sdr.rs  topology.rs  vcbp_io.rs
instnct-core/src/network/: audit.rs  disk.rs
instnct-core/src/propagation/: mod.rs  tests.rs
instnct-core/src/sdk_candidate/: errors.rs  mod.rs  progress.rs  types.rs
instnct-core/src/visual_export/: exporter.rs  ingest.rs  larger_playback.rs  mod.rs  schema.rs
instnct-core/tests/: public_api.rs  root_api.rs  route_grammar_beta_contract.rs  route_grammar_external_consumer.rs
instnct-core/tests/fixtures/: alice_corpus.txt  beta_smoke_corpus.txt  byte_opcode_golden.json  code_corpus.txt  grower_regression_golden.json
instnct-core/tests/ui/: fail_build_wave_table.rs  fail_neuron_count_mutation.rs  fail_private_module_import.rs  fail_unchecked_entrypoint.rs  pass_root_surface.rs
instnct-core/verilog/: alu8_c19.v  alu8_standard.v  c19_synth_report.txt  comparison.md  standard_synth_report.txt
vraxion-runtime/: Cargo.toml  README.md
vraxion-runtime/src/: agency.rs  binary_ingress.rs  bit_codec.rs  body.rs  curriculum.rs  egress.rs  final_bake.rs  final_train.rs  final_training.rs  final_training_supervisor.rs  global_library_supervisor.rs  lib.rs  library.rs  manager.rs  next_mutation.rs  pocket.rs  proposal.rs  text_field.rs  training_data.rs
(+6691 files in other folders)
