[workspace]
members = ["vraxion-runtime"]
resolver = "2"

[workspace.package]
version = "6.1.7"
edition = "2021"
license = "LicenseRef-VRAXION-Community-Source-1.0"
authors = ["VRAXION"]
description = "VRAXION Rust runtime release surface with E127 governed Operator evidence"
repository = "https://github.com/VRAXION/VRAXION"
homepage = "https://github.com/VRAXION/VRAXION"
documentation = "https://github.com/VRAXION/VRAXION"
rust-version = "1.94"
