[workspace]
resolver = "3"
members = [
    "crates/alphasync-core",
    "crates/alphasync-runtime",
]

[workspace.package]
edition = "2024"
license = "LicenseRef-VRAXION-Community-Source-1.0"
repository = "https://github.com/VRAXION/VRAXION"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[patch.crates-io]
alphasync-core = { path = "crates/alphasync-core" }