[package]
name = "vraxion-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minimal locked VRAXION runtime kernel with training data readiness gate"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "vraxion_runtime"
path = "src/lib.rs"

[[bin]]
name = "adversarial_probe"
path = "src/bin/adversarial_probe.rs"

[[bin]]
name = "locked_body_preflight"
path = "src/bin/locked_body_preflight.rs"

[[bin]]
name = "pocket_governance_preflight"
path = "src/bin/pocket_governance_preflight.rs"

[[bin]]
name = "pocket_manager_preflight"
path = "src/bin/pocket_manager_preflight.rs"

[[bin]]
name = "next_mutation_preflight"
path = "src/bin/next_mutation_preflight.rs"

[[bin]]
name = "pocket_library_preflight"
path = "src/bin/pocket_library_preflight.rs"

[[bin]]
name = "curriculum_runner_preflight"
path = "src/bin/curriculum_runner_preflight.rs"

[[bin]]
name = "curriculum_queue_preflight"
path = "src/bin/curriculum_queue_preflight.rs"

[[bin]]
name = "curriculum_resume_preflight"
path = "src/bin/curriculum_resume_preflight.rs"

[[bin]]
name = "final_bake_preflight"
path = "src/bin/final_bake_preflight.rs"

[[bin]]
name = "final_train"
path = "src/bin/final_train.rs"

[[bin]]
name = "training_data_readiness"
path = "src/bin/training_data_readiness.rs"

[[bin]]
name = "final_training_runner"
path = "src/bin/final_training_runner.rs"

[[bin]]
name = "final_training_supervisor"
path = "src/bin/final_training_supervisor.rs"

[[bin]]
name = "global_library_supervisor"
path = "src/bin/global_library_supervisor.rs"

[[bin]]
name = "e136p_atomic_multiwrite_preview"
path = "src/bin/e136p_atomic_multiwrite_preview.rs"

[[bin]]
name = "e136q_atomic_multiwrite_overlay_canary"
path = "src/bin/e136q_atomic_multiwrite_overlay_canary.rs"
