[package]
name = "alphasync-runtime"
version = "0.1.0"
description = "AlphaSync runtime proposal collection and safe synthetic examples."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/artifact_json.rs",
    "src/artifact_writer.rs",
    "src/lib.rs",
    "src/logic_iq.rs",
    "src/main.rs",
    "src/synthetic.rs",
    "examples/synthetic_runtime_scene.rs",
    "examples/synthetic_runtime_smoke.rs",
]

[features]
default = []

[dependencies]
alphasync-core = { path = "../alphasync-core" }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[lib]
path = "src/lib.rs"

[lints]
workspace = true